
8.14  2019-04-18
  - Added EXPERIMENTAL timer method to Mojo::Promise.
  - Added header_exists and header_exists_not methods to Test::Mojo.
  - Fixed a bug in Mojo::Promise where the finally method could change promise
    values.
  - Fixed a merge bug in Mojo::Parameters where multiple values sharing the same
    name could get lost.

8.13  2019-03-21
  - Added EXPERIMENTAL map method to Mojo::Promise. (jberger)
  - Added EXPERIMENTAL min_compress_size attribute to Mojolicious::Renderer.
    (CandyAngel, mjemmeson)
  - Improved the security of signed cookies by also signing the cookie name.
    Note that this means that all sessions will be reset.
  - Fixed Mojo::IOLoop::Server to not check if listen sockets are writable.

8.12  2019-01-27
  - Added EXPERIMENTAL timeout method to Mojo::Promise. (batman)
  - Removed deprecated module Mojolicious::Plugin::PODRenderer.
  - Removed deprecated method mojo_lib_dir from Mojo::Home.
  - Fixed rare warning in Mojo::Log. (Grinnz)

8.11  2019-01-01
  - Added EXPERIMENTAL support for SameSite cookies to better protect
    Mojolicious applications from CSRF attacks. (dylanwh, sri)
  - Added EXPERIMENTAL samesite attributes to Mojo::Cookie::Response and
    Mojolicious::Cookies. (dylanwh, sri)
  - Added lstat method to Mojo::File. (Grinnz)
  - Added remove method to Mojo::File.
  - Improved eval command with support for promises. (jberger)
  - Improved Mojo::JSON::Pointer to ignore many invalid JSON Pointers.

8.10  2018-12-18
  - Added reset event to Mojo::IOLoop.
  - Added limit argument to split method in Mojo::ByteStream. (s1037989)

8.09  2018-12-02
  - Added touch method to Mojo::File.
  - Added max_depth option to list_tree method in Mojo::File.

8.08  2018-11-26
  - Added stat method to Mojo::File.

8.07  2018-11-16
  - Fixed a bug that caused debug log messages to be generated for static files.
  - Fixed a bug in Mojo::Server::Morbo that prevented the before_server_start
    hook from getting emitted.
